--- a/Summative_Series_RLC.ipynb
+++ b/Summative_Series_RLC.ipynb
@@ -13,7 +13,7 @@
       "Python        : 3.7.4 \n",
       "NumPy         : 1.18.1\n",
       "Encoding      : utf-8\n",
-      "Timestamp     : 1594309632.144816\n"
+      "Timestamp     : 1594310546.1554108\n"
      ]
     }
    ],
@@ -229,7 +229,7 @@
       "Results for post-resonant condition:\n",
       "-----------------------------------\n",
       "\n",
-      "fco1    : 6543.11262 Hz\n",
+      "fco2    : 6543.11262 Hz\n",
       "XL      : 3288.927125 Ω ∠ 90.000 °\n",
       "XC      : 2432.404154 Ω ∠ -90.000 °\n",
       "IT      : 3.975431e-03 Amperes ∠ -42.923 °\n",
